I added a couple of properties to GlobalDefaults to make them the same across components

--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -36,7 +36,7 @@
 
 <table class="@TimeComponentStyle textdonotwrap timewrapper">
     <tr>
-        <td width="@LabelWidth">
+        <td width="@Column1Width">
             <Label Name="LabelComponent" Parent="this" Caption="@Caption" Left="@LabelLeft" 
                 FontSize="@LabelFontSize" FontName="@LabelFontName" ZIndex="60"
                 Top=@LabelTop Width="80" TextColor="@LabelColor.Name"></Label>
