--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -84,7 +84,7 @@
                 </td>
                 @if (ShowButton)
                 {
-                    <td width="@ButtonWidth">
+                    <td width="@Column2Width">
                         <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight"
                                 Unit="px" Width="@ButtonWidth" Name="CalendarButton" Position="@ButtonPosition" ZIndex="@ZIndex"
                                 Left="@ButtonLeft" Top=@ButtonTop ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
