LabelLeft and LabelTop were on the ComboBox but not applied to the underlying TextBox.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -280,12 +280,12 @@
                 LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
                 TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
-                ZIndex="@ZIndex" Left="@TextBoxLeft">
+                ZIndex="@ZIndexPlus20" Left="@TextBoxLeft">
             </TextBoxComponent>
             </td>
             <td width="@ButtonWidth">
                 <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight" 
-                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" ZIndex="@ZIndex"
+                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" ZIndex="@ZIndexPlus30"
                     Left="@ButtonLeft" Top=@ButtonTop  ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
                 </ImageButton>
             </td>
