--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -15,7 +15,7 @@
     Top: @TopStyle;
     width: @WidthStyle;
     min-width: @WidthStyle;
-    max-width: max-content;
+    max-width: @WidthStyle;
     border-width: 1px;
     border-style: solid;
     border-color: black;
