--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -115,7 +115,7 @@
                     ListItemWidth=@ListItemWidth  ListItemHeight="@ListItemHeight" ListItemLeft=@CheckedListItemLeft 
                     ListItemTop="@CheckedListItemTop" ListItemBackgroundColor=@ListItemBackgroundColor
                     CheckBoxTextXPosition="@CheckBoxTextXPosition" CheckBoxTextYPosition="@CheckBoxTextYPosition"
-                    ListBackgroundColor="ListBackgroundColor" Top="0" ZIndex="@ZIndexPlus10"
+                    ListBackgroundColor="@ListBackgroundColor" Top="0" ZIndex="@ZIndexPlus10"
                     CheckBoxXPosition=@CheckBoxXPosition  CheckBoxYPosition="@CheckBoxYPosition" 
                     Left=@CheckedListLeft  ListItemClassName="@ListItemClassName"  ClassName="@CheckedListClassName">
                 </CheckedListBox>
